internal/kgateway/agentgatewaysyncer/testdata/inputs/backend/backend-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /mcp-backend
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: mcp-backend
  - matches:
    - path:
        type: PathPrefix
        value: /mcp-svc
    backendRefs:
    - name: mcp-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /ai-groups
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: ai-groups
  - matches:
    - path:
        type: PathPrefix
        value: /openai-single
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: openai-single
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-svc
  labels:
    app: mcp-app
  annotations:
    kgateway.dev/mcp-path: /test
spec:
  selector:
    test: test
  ports:
  - protocol: TCP
    appProtocol: kgateway.dev/mcp
    port: 80
    targetPort: test
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: mcp-backend
spec:
  type: MCP
  mcp:
    targets:
    - name: mcp-static
      static:
        host: mcp-app.foo
        port: 8000
        protocol: StreamableHTTP
    - name: mcp-selector
      selector:
        service:
          matchLabels:
            app: mcp-app
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: mcp-tls-system-cert
spec:
  targetRefs:
  - name: mcp-backend
    kind: Backend
    group: gateway.kgateway.dev
    sectionName: mcp-static
  - name: mcp-svc
    kind: Service
    sectionName: "80"
  validation:
    hostname: mcp-app.foo
    wellKnownCACertificates: System
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: mcp-tls-ca-cert
spec:
  targetRefs:
  - name: mcp-svc
    kind: Service
  validation:
    caCertificateRefs:
    - name: ca-cert-1
      kind: ConfigMap
    - name: ca-cert-2
      kind: ConfigMap      
    hostname: mcp-svc.foo
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca-cert-1
data:
  ca.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIC1jCCAb4CCQCJczLyBBZ1GTANBgkqhkiG9w0BAQsFADAtMRUwEwYDVQQKDAxl
[...]
    SxODgqhtaPnOxQ==
    -----END CERTIFICATE-----
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: ca-cert-2
data:
  ca.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIDFTCCAf2gAwIBAgIUG9Mdv3nOQ2i7v68OgjArU4lhBikwDQYJKoZIhvcNAQEL
[...]
    SWP+58ApfCcURLpMxUmxkO1ayfecNJbmSQ==
    -----END CERTIFICATE-----
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: ai-groups
spec:
  type: AI
  ai:
    priorityGroups:
    - providers:
      - name: openai
        openai:
          model: "gpt-4o"
          authToken:
            kind: "SecretRef"
            secretRef:
              name: openai-primary-secret
      - name: anthropic
        anthropic:
          model: "claude-3-opus-20240229"
          authToken:
            kind: "Inline"
            inline: "sk-anthropic-primary"
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: openai-single
spec:
  type: AI
  ai:
    llm:
      openai:
        model: "gpt-4o"
        authToken:
          kind: "SecretRef"
          secretRef:
            name: openai-primary-secret         
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: anthropic-single
spec:
  type: AI
  ai:
    llm:
      anthropic:
        model: "claude-3-opus-20240229"
        authToken:
          kind: "Inline"
          inline: "sk-anthropic-primary"          
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: ai-tls
spec:
  targetRefs:
  - name: ai-groups
    kind: Backend
    group: gateway.kgateway.dev
    sectionName: anthropic
  - name: openai-single
    kind: Backend
    group: gateway.kgateway.dev
  validation:
    hostname: foo
    wellKnownCACertificates: System
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: ai-tls-all-groups
spec:
  targetRefs:
  - name: ai-groups
    kind: Backend
    group: gateway.kgateway.dev
  validation:
    hostname: baz
    wellKnownCACertificates: System
