internal/kgateway/agentgatewaysyncer/testdata/inputs/backend/bedrock-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: gateway.kgateway.dev
          kind: Backend
          name: bedrock
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: bedrock
spec:
  type: AI
  ai:
    llm:
      bedrock:
        model: anthropic.claude-3-5-haiku-20241022-v1:0
        region: us-west-2
        guardrail:
          identifier: guardrail-policy-id
          version: guardrail-policy-version
        auth:
          type: Secret
          secretRef:
            name: bedrock-secret
---
apiVersion: v1
kind: Secret
metadata:
  name: bedrock-secret
data:
  accessKey: "ZmFrZUFjY2Vzc0tleUlk"
  secretKey: "ZmFrZVNlY3JldEtleVN0cmluZw=="
  sessionToken: ""
