internal/kgateway/agentgatewaysyncer/testdata/inputs/backend/mcp-auth-remote.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: gateway.kgateway.dev
          kind: AgentgatewayBackend
          name: mcp-backend-static
      rule:
        matches:
        - path:
            type: Prefix
            value: /static
    - backendRefs:
        - group: gateway.kgateway.dev
          kind: AgentgatewayBackend
          name: mcp-backend-selector
      rule:
        matches:
        - path:
            type: Prefix
            value: /selector
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  labels:
    app: mcp-app
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      appProtocol: kgateway.dev/mcp
      port: 80
      targetPort: test
    - protocol: TCP
      appProtocol: kgateway.dev/mcp-sse
      port: 90
      targetPort: test-2
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: mcp-backend-selector
spec:
  mcp:
    targets:
      - name: mcp-app
        selector:
          services:
            matchLabels:
              app: mcp-app
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: mcp-backend-static
spec:
  mcp:
    targets:
      - name: mcp-target
        static:
          host: mcp-app.default.svc.cluster.local
          port: 8000
          protocol: StreamableHTTP
          path: override-sse
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: keycloak-mcp-authn-policy
spec:
  targetRefs:
    - name: mcp-backend-static
      kind: Backend
      group: gateway.kgateway.dev
    - name: mcp-backend-selector
      kind: Backend
      group: gateway.kgateway.dev
  backend:
    mcp:
      authentication:
        issuer: http://keycloak:7080/realms/mcp
        jwks:
          uri: http://keycloak.default.svc.cluster.local:7080/realms/mcp/protocol/openid-connect/certs
        audiences:
          - "account"
        idp: Keycloak
        resourceMetadata:
          resource: http://mcp-website-fetcher.default.svc.cluster.local/mcp
          scopesSupported: '["tools/call/fetch"]'
          bearerMethodsSupported: '["header"]'
          resourceDocumentation: http://mcp-website-fetcher.default.svc.cluster.local/docs
          resourcePolicyUri: http://mcp-website-fetcher.default.svc.cluster.local/policies
---
apiVersion: v1
data:
  jwks-store: '{"http://keycloak.default.svc.cluster.local:7080/realms/mcp/protocol/openid-connect/certs":"{\"keys\":[{\"use\":\"enc\",\"kty\":\"RSA\",\"kid\":\"-VsQtem_T9-RdhVcv9hK3qVGqtrpLil5z1-ivX2StZY\",\"alg\":\"RSA-OAEP\",\"n\":\"klR5MxpPeHVd8cCtYvEL-9lcsv8gTaR_4MM053_XIhzJtq8kV3TY8Co35LD926QzCNam0qhZzckGn0W3S9hPkomNtXsbEoe5-kqY5BpfolUMj9ZfACz04QRqQIdecUGoHh4hAV07-UqHVUEwCVQNjVGZMzHnS05xxeVdCJPc-1KJrw_AVV6tKKSq0Q6TUWs6BFsXCd5zXQEyYPOmSflAmB7-xogWgdBoSplOkiiiGXeJu2_lW4Ob4C5n-cYDjo5-LB6YU3JL [...]
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: jwks-store
  name: jwks-store-1ede70d6c818eff6121a0625c628681a
  namespace: kgateway-system
