internal/kgateway/agentgatewaysyncer/testdata/inputs/backend/multipool-secret-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: gateway.kgateway.dev
          kind: Backend
          name: multipool-secret
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: multipool-secret
spec:
  type: AI
  ai:
    priorityGroups:
    - providers:
      - openai:
          model: "gpt-4-turbo"
          authToken:
            kind: "SecretRef"
            secretRef:
              name: openai-secret
      - gemini:
          model: "gemini-1.5-pro"
          authToken:
            kind: "SecretRef"
            secretRef:
              name: gemini-secret
---
apiVersion: v1
kind: Secret
metadata:
  name: openai-secret
type: Opaque
data:
  Authorization: QmVhcmVyIHNrLW9wZW5haS1zZWNyZXQta2V5 # Bearer sk-openai-secret-key
---
apiVersion: v1
kind: Secret
metadata:
  name: gemini-secret
type: Opaque
data:
  Authorization: Z2VtaW5pLWFwaS1rZXk= # gemini-api-key
